//file:noinspection GroovyUnusedAssignment
plugins {
    id 'java'
    id 'org.springframework.boot'
    id 'io.spring.dependency-management'
}

group = 'com.jobosint'
version = '0.0.1'

java {
    sourceCompatibility = '21'
}

allprojects {
    repositories {
        mavenCentral()
        maven { url 'https://jitpack.io' }
        maven { url 'https://repo.spring.io/milestone' }
        maven { url 'https://repo.spring.io/snapshot' }
    }
}

dependencies {
    implementation platform("org.springframework.ai:spring-ai-bom:_")
    implementation 'org.springframework.ai:spring-ai-pgvector-store:_'
    implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:_'

    implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'
    implementation 'com.vladsch.flexmark:flexmark-html2md-converter:0.64.8'

    implementation Spring.boot.thymeleaf
    implementation Spring.boot.actuator
    implementation Spring.boot.data.jdbc
    implementation Spring.boot.web
    implementation 'org.springframework.boot:spring-boot-starter-aop:_'
    // https://github.com/mizosoft/methanol
    implementation 'com.github.mizosoft.methanol:methanol:_'
//    implementation 'com.jayway.jsonpath:json-path:_'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:_'
    // https://mvnrepository.com/artifact/com.theokanning.openai-gpt3-java/service
    implementation 'com.theokanning.openai-gpt3-java:service:_'
    // https://mvnrepository.com/artifact/org.jsoup/jsoup
    implementation 'org.jsoup:jsoup:_'
    // https://github.com/serpapi/google-search-results-java
    implementation 'com.github.serpapi:google-search-results-java:_'

    implementation 'com.github.slugify:slugify:_'

    developmentOnly Spring.boot.devTools
    compileOnly 'org.projectlombok:lombok:_'
    annotationProcessor 'org.projectlombok:lombok:_'
    runtimeOnly 'org.postgresql:postgresql:_'

    testImplementation Spring.boot.test
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
//	testImplementation 'org.springframework.boot:spring-boot-testcontainers:_'
//	testImplementation 'org.testcontainers:junit-jupiter:_'
//	testImplementation 'org.testcontainers:postgresql:_'
}

tasks.named('test') {
    useJUnitPlatform()
}

